tests/pact/bad/bad-defcap-explicit-mgr-auto-impl.repl
(interface i
  (defcap CAP:bool (a:string b:integer)
    @managed b mgr)
  (defun mgr:integer (a:integer b:integer)))

(module m G
  (defcap G () true)
  (implements i)
  ;; auto @managed
  (defcap CAP:bool (a:string b:integer) @managed
    true)
  (defun mgr:integer (a:integer b:integer) 1)
  )
